--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 </head>
 <body>
@@ -57,7 +58,7 @@
        <h3>screen resolution: <span id="screen-resolution"></span></h3>
        <h3>cabinet resolution: <span id="cabinet-resolution"></span></h3>
        <h3>lamp type: <span id="lamp-type-res"></span></h3>
-       <button class="form-control bg-success text-white">Print</button>
+       <button class="form-control bg-info text-white" id="download">Download</button>
    </div>
 </form>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -69,6 +70,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+
 <script src="app.js"></script>
 </body>
 </html>
